--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>The Big Men - A League of Legends Outfit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -16,6 +16,14 @@
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/cufon-yui.js"> </script>
+    <script src="js/DIN_Medium_500.font.js"> </script>
+    
+    <script type="text/javascript">
+        
+        Cufon.replace("h1, p");
+        </script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -73,9 +81,9 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+        <h1>The Big Men</h1>
+        <p>A site dedicated to the greatest low-elo team in Northwestern Europe. They might not always win. They might not always try. Let's leave it there for now.</p>
+        <!--<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
       </div>
 
       <!-- Example row of columns -->
@@ -108,6 +116,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript"> Cufon.now(); </script>
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"> </script>
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>-->
     <script>            window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
