--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; The Big Men 2013</p>
       </footer>
 
     </div> <!-- /container -->
