changed to span10/2

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <!-- Example row of columns -->
       <div class="row">
-        <div class="span9">
+        <div class="span10">
           <h2>Latest News</h2>
           <h5> Strange Game, Strange Result  - <a>Linabury</a> February 2013</h5> 
           <p>Confusion reigned supreme in The Big Mens latest outing on the fields of justice. Aesthetic pitchfork master cleanse pop-up wolf neutra, tousled sartorial semiotics typewriter etsy. Jean shorts butcher wayfarers plaid banh mi tofu. Biodiesel cred scenester sriracha quinoa keytar. 3 wolf moon PBR fap vegan mixtape yr. High life seitan pitchfork, cliche williamsburg typewriter aesthetic 3 wolf moon twee beard 8-bit. Odd future high life craft beer polaroid, post-ironic actually pop-up thundercats american apparel banksy intelligentsia organic. Etsy selfies mcsweeney's bespoke fashion axe, ethnic biodiesel. </p>
@@ -100,10 +100,10 @@
           <p>Pitchfork yr vice try-hard bespoke. Church-key mustache direct trade beard, art party occupy raw denim forage pork belly cardigan chambray mixtape single-origin coffee. Cardigan photo booth kogi, beard bespoke farm-to-table keffiyeh tattooed master cleanse try-hard. Tofu sartorial kogi post-ironic, authentic vinyl ethical plaid VHS put a bird on it echo park. Ugh swag VHS, typewriter whatever gluten-free mcsweeney's pork belly marfa butcher. Flexitarian cliche wolf Austin photo booth forage, VHS church-key fap. Artisan godard salvia, art party pour-over wolf DIY direct trade. </p>
           <p><a class="btn" href="#">More &raquo;</a></p>
         </div>
-        <div class="span3">
+        <div class="span2">
           <h2>Comments</h2>
           <p> <a href="/">Linabury</a> 1st Feb 2013</p>
-          <p> This site looks like shit. </p>
+          <p> This site looks like shit. Pitchfork yr vice try-hard bespoke. Church-key mustache direct trade beard, </p>
          
        </div>
         
